apps/react-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: route-demo-ingress
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: route-demo.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: route-demo-svc
                port:
                  number: 80
